--- a/htmlproject-4/index.html
+++ b/htmlproject-4/index.html
@@ -16,23 +16,26 @@
     <div class="main-bx">
         <table>
             <tr>
-                <th colspan="5">HEADER</th>
+                <th colspan="5" class="bx-3"><h1>Complex page layout</h1></th>
             </tr>
 
             <tr>
 
-                <td rowspan="5">BX-1</td>
-                <td colspan="4">BX-2</td>
+                <td rowspan="5" width="200px" bgcolor="skyblue">
+                    <!-- <H1>HELLO RAJ BHAI </H1>
+                    <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi beatae quibusdam, nesciunt quisquam illo facilis explicabo inventore debitis deleniti, a enim repellendus ipsa quia eveniet odit consequuntur quae sunt modi temporibus tenetur ad? Officia aliquam corrupti minus, numquam explicabo voluptate sed possimus, tenetur quo incidunt iste voluptatem eius culpa facilis.</P> -->
+                </td>
+                <td colspan="4" height="200px" bgcolor="gray"></td>
                 <!-- <td>3</td> -->
                 <!-- <td>4</td> -->
                 <!-- <td>5</td> -->
             </tr>
             <tr>
                 <!-- <td>1</td> -->
-                <td rowspan="4" colspan="2" class="bx-3">BX-3</td>
+                <td rowspan="4" colspan="2" width="100px" bgcolor="pink"></td>
                 <!-- <td rowspan="4">3</td> -->
-                <td rowspan="3">BX-4</td>
-                <td rowspan="3">BX-5</td>
+                <td rowspan="3" width="100px" height="50px"></td>
+                <td rowspan="3" width="100px" height="50px" bgcolor="orange"></td>
             </tr>
             <tr>
                 <!-- <td>1</td> -->
@@ -52,7 +55,7 @@
                 <!-- <td>1</td> -->
                 <!-- <td>2</td> -->
                 <!-- <td>3</td> -->
-                <td colspan="2">BX-6</td>
+                <td colspan="2" height="100px" bgcolor="gree"></td>
                 <!-- <td>5</td> -->
             </tr>
             <tr>
