--- a/htmlproject-6/index.html
+++ b/htmlproject-6/index.html
@@ -73,9 +73,9 @@
                 <div class="card1">
                     <div class="c1">
                         <ol class="card-btn">
-                            <li><img src="image/heart.png"></li>
-                            <li><img src="image/heart.png"></li>
-                            <li><img src="image/heart.png"></li>
+                            <li class="p3-li-styling"><img src="image/heart.png" class="p3-img-li-styling"></li>
+                            <li class="p3-li-styling"><img src="image/heart.png" class="p3-img-li-styling"></li>
+                            <li class="p3-li-styling"><img src="image/heart.png" class="p3-img-li-styling"></li>
                         </ol>
                     </div>
                     <div class="c2">
@@ -88,9 +88,9 @@
                 <div class="card2">
                     <div class="c1-2">
                         <ol class="card-btn">
-                            <li><img src="image/heart.png"></li>
-                            <li><img src="image/heart.png"></li>
-                            <li><img src="image/heart.png"></li>
+                            <li class="p3-li-styling"><img src="image/heart.png" class="p3-img-li-styling"></li>
+                            <li class="p3-li-styling"><img src="image/heart.png" class="p3-img-li-styling"></li>
+                            <li class="p3-li-styling"><img src="image/heart.png" class="p3-img-li-styling"></li>
                         </ol>
                     </div>
                     <div class="c2">
@@ -103,9 +103,9 @@
                 <div class="card3">
                     <div class="c1-3">
                         <ol class="card-btn">
-                            <li><img src="image/heart.png"></li>
-                            <li><img src="image/heart.png"></li>
-                            <li><img src="image/heart.png"></li>
+                            <li class="p3-li-styling"><img src="image/heart.png" class="p3-img-li-styling"></li>
+                            <li class="p3-li-styling"><img src="image/heart.png" class="p3-img-li-styling"></li>
+                            <li class="p3-li-styling"><img src="image/heart.png" class="p3-img-li-styling"></li>
                         </ol>
                     </div>
                     <div class="c2">
@@ -118,9 +118,9 @@
                 <div class="card4">
                     <div class="c1-4">
                         <ol class="card-btn">
-                            <li><img src="image/heart.png"></li>
-                            <li><img src="image/heart.png"></li>
-                            <li><img src="image/heart.png"></li>
+                            <li class="p3-li-styling"><img src="image/heart.png" class="p3-img-li-styling"></li>
+                            <li class="p3-li-styling"><img src="image/heart.png" class="p3-img-li-styling"></li>
+                            <li class="p3-li-styling"><img src="image/heart.png" class="p3-img-li-styling"></li>
                         </ol>
                     </div>
                     <div class="c2">
@@ -130,6 +130,41 @@
                         <button class="card-click">Learn More ></button>
                     </div>
                 </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="forth-pg">
+        <div class="contentP4">
+            <div class="content-bx-p4">
+                <h1>Watch our Courses</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi laborum repudiandae ipsum veritatis
+                    quas! Animi.</p>
+            </div>
+            <div class="content-bx-card-p4">
+                <div class="p4-card1">
+                    <div class="card-contener">
+                        <img src="image/invertheartlogo.png" class="p4-imglogo-styling">
+
+                        <h1>FREE</h1>
+                        <p>Lorem ipsum dolor sit amet <br>consectetur adipisicing.</p>
+                        <p>19$ <br>Per Month</p>
+                        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Dolores, unde.</p>
+                        <button class="p4-card-btn">Try For Free</button>
+
+                        <ul class="p4-ul-styling">
+                            <li class="p4-li-styling">Lorem ipsum dolor sit.</li>
+                            <li class="p4-li-styling">Lorem ipsum dolor sit.</li>
+                            <li class="p4-li-styling">Lorem ipsum dolor sit.</li>
+                            <li class="p4-li-styling">Lorem ipsum dolor sit.</li>
+                            <li class="p4-li-styling">Lorem ipsum dolor sit.</li>
+
+                        </ul>
+                    </div>
+                </div>
+                <div class="p4-card2">2</div>
+                <div class="p4-card3">3</div>
 
             </div>
         </div>
