Assignment finaly finished

--- a/htmlproject-6/index.html
+++ b/htmlproject-6/index.html
@@ -149,25 +149,211 @@
 
                         <h1>FREE</h1>
                         <p>Lorem ipsum dolor sit amet <br>consectetur adipisicing.</p>
-                        <p>19$ <br>Per Month</p>
+                        <p class="p4-prize-styling">19$</p>
+                        <span>Per Month</span>
                         <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Dolores, unde.</p>
                         <button class="p4-card-btn">Try For Free</button>
 
                         <ul class="p4-ul-styling">
-                            <li class="p4-li-styling">Lorem ipsum dolor sit.</li>
-                            <li class="p4-li-styling">Lorem ipsum dolor sit.</li>
-                            <li class="p4-li-styling">Lorem ipsum dolor sit.</li>
-                            <li class="p4-li-styling">Lorem ipsum dolor sit.</li>
-                            <li class="p4-li-styling">Lorem ipsum dolor sit.</li>
+                            <li class="p4-li-styling"><img src="image/greencheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                            <li class="p4-li-styling"><img src="image/greencheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                            <li class="p4-li-styling"><img src="image/greencheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                            <li class="p4-li-styling"><img src="image/whitecheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                            <li class="p4-li-styling"><img src="image/whitecheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+
 
                         </ul>
                     </div>
                 </div>
-                <div class="p4-card2">2</div>
-                <div class="p4-card3">3</div>
+                <div class="p4-card2">
+                    <div class="card-contener">
+                        <img src="image/heartlogo.png" class="p4-imglogo-styling">
 
+                        <h1>FREE</h1>
+                        <p>Lorem ipsum dolor sit amet <br>consectetur adipisicing.</p>
+                        <p class="p4-prize-card2-styling">19$</p>
+                        <span>Per Month</span>
+                        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Dolores, unde.</p>
+                        <button class="p4-card-btn2">Try For Free</button>
+
+                        <ul class="p4-ul-styling">
+                            <li class="p4-li-styling"><img src="image/greencheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                            <li class="p4-li-styling"><img src="image/greencheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                            <li class="p4-li-styling"><img src="image/greencheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                            <li class="p4-li-styling"><img src="image/whitecheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                            <li class="p4-li-styling"><img src="image/whitecheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="p4-card3">
+                    <div class="card-contener">
+                        <img src="image/invertheartlogo.png" class="p4-imglogo-styling">
+
+                        <h1>FREE</h1>
+                        <p>Lorem ipsum dolor sit amet <br>consectetur adipisicing.</p>
+                        <p class="p4-prize-styling">19$</p>
+                        <span>Per Month</span>
+                        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Dolores, unde.</p>
+                        <button class="p4-card-btn">Try For Free</button>
+
+                        <ul class="p4-ul-styling">
+                            <li class="p4-li-styling"><img src="image/greencheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                            <li class="p4-li-styling"><img src="image/greencheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                            <li class="p4-li-styling"><img src="image/greencheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                            <li class="p4-li-styling"><img src="image/whitecheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                            <li class="p4-li-styling"><img src="image/whitecheck.png" class="p4-li-imgtag-styling">Lorem
+                                ipsum dolor sit amet consectetur.</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
+    </div>
+
+    <div class="fifth-pg">
+        <div class="content-p5">
+            <div class="content-bx-p5">
+                <h1>Our Expers Teacher</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis officiis voluptatem dolorem <br>
+                    quidem ea impedit quos accusantium. Rerum minus eveniet natus voluptas porro, omnis cumque.</p>
+            </div>
+            <div class="content-bx-card-p5">
+                <div class="p5-card1">
+                    <img src="image/femaleDP.jpg" class="p5-DP-styling">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint ducimus tempore at pariatur sed
+                        cupiditate nam tempora, libero consectetur iure?</p>
+                    <img src="image/5 star.png" class="p5-5star-png">
+                    <h1 class="name"> Scarlett Symphony</h1>
+                    <p>Lorem, ipsum.</p>
+                </div>
+                <div class="p5-card2">
+                    <img src="image/maleDP.jpg" class="p5-DP-styling">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint ducimus tempore at pariatur sed
+                        cupiditate nam tempora, libero consectetur iure?</p>
+                    <img src="image/5 star.png" class="p5-5star-png">
+                    <h1 class="name"> Mark Wallace</h1>
+                    <p>Lorem, ipsum.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="sixth-pg">
+        <div class="content-p6">
+            <div class="content-bx-p6">
+                <h1>Approdable Package</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur <br>quaerat neque omnis labore
+                    quae veritatis quidem aut, ratione ut perferendis?</p>
+                <div class="search-bx-btn">
+                    <input type="text" placeholder="Your Email" class="text-bx">
+                    <input type="button" value="SUBSCRIBE" class="btn-bx">
+
+                </div>
+            </div>
+            <div class="content-bx-links-p6">
+                <ul class="links-ul-styling">
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Category</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">About links</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Lorem, ipsum.</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Lorem, ipsum dolor.</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Lorem.</li>
+                    </a>
+                </ul>
+
+                <ul class="links-ul-styling">
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Category</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">About links</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Lorem, ipsum.</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Lorem, ipsum dolor.</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Lorem.</li>
+                    </a>
+                </ul>
+
+                <ul class="links-ul-styling">
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Category</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">About links</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Lorem, ipsum.</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Lorem, ipsum dolor.</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Lorem.</li>
+                    </a>
+                </ul>
+
+                <ul class="links-ul-styling">
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Category</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">About links</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Lorem, ipsum.</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Lorem, ipsum dolor.</li>
+                    </a>
+                    <a href="#link">
+                        <li class="p6-linklist-styling">Lorem.</li>
+                    </a>
+                </ul>
+
+                <div class="contect-bx-p6">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <h4>999-9999-999</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>abc@webpage.com</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p class="footer-ptag-styling">All Rights Reserved &copy; 2024 By DEEPAK</p>
+
+        <img src="image/facebook.png" class="footer-imglogo-styling">
+        <img src="image/twitter.png" class="footer-imglogo-styling">
+        <img src="image/google.png" class="footer-imglogo-styling">
     </div>
 </body>
 
