--- a/htmlproject-18---28-2-23/index.html
+++ b/htmlproject-18---28-2-23/index.html
@@ -22,7 +22,7 @@
   <div class="main">
     <!-- ---------------------------------------------- -->
     <div class="home-page">
-
+      <div class="sticky-head">
       <div class="header-1">
         <div class="web-logo">
           <p>Review<span>Article</span></p>
@@ -53,61 +53,158 @@
       </div>
 
       <div class="header-2">
-        <nav class="menu-tab"><a href="#">Home</a></nav>
+        <nav class="menu-tab"><a href="#page2">Home</a></nav>
         <nav class="menu-tab"><a href="#">Bestseller</a></nav>
         <nav class="menu-tab"><a href="#">Category</a></nav>
         <nav class="menu-tab"><a href="#">Community</a></nav>
         <nav class="menu-tab"><a href="#">Blog</a></nav>
       </div>
-
+</div>
       <div class="home-page-content-bx">
         <div class="left-bx">
-        <div class="text-area">
-          <h1>Hi! I Am <br>Deepak Gameti</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, facilis? Magnam odit officia cupiditate
-            velit totam necessitatibus 
-            nemo.</p>
+          <div class="text-area">
+            <h1>Hi! I Am <br>Deepak Gameti</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, facilis? Magnam odit officia
+              cupiditate
+              velit totam necessitatibus
+              nemo.</p>
+          </div>
+
+          <div class="review-bx">
+            <nav>
+              <h2>500K+</h2>
+              <p>User use this app</p>
+            </nav>
+
+            <nav>
+              <h2>20K+</h2>
+              <p>User review <br>this app</p>
+            </nav>
+
+            <nav>
+              <h2>1K+</h2>
+              <p>User review <br>this app</p>
+            </nav>
+          </div>
+          <div class="button-bx">
+            <button class="blue-btn btn">Read Now</button>
+            <button class="trans-btn btn">Sigh up &nbsp; <i class="fa-solid fa-arrow-right"></i></button>
+          </div>
         </div>
 
-        <div class="review-bx">
-          <nav>
-            <h2>500K+</h2>
-            <p>User use this app</p>
-          </nav>
-
-          <nav>
-            <h2>20K+</h2>
-            <p>User review <br>this app</p>
-          </nav>
-
-          <nav>
-            <h2>1K+</h2>
-            <p>User review <br>this app</p>
-          </nav>
-        </div> 
-        <div class="button-bx">
-          <button class="blue-btn btn">Read Now</button>
-          <button class="trans-btn btn">Sigh up &nbsp; <i class="fa-solid fa-arrow-right"></i></button>
+        <div class="right-bx">
+          <div class="clip-shape">
+            <img src="image/man.png" alt="this is image" class="image-styling">
+          </div>
         </div>
-      </div>
-
-      <div class="right-bx">
-        <div class="clip-shape">
-          <img src="image/man.png" alt="this is image" class="image-styling">
-        </div>
-      </div>
-
       </div>
 
     </div>
 
     <!-- ---------------------------------------------- -->
-    <div class="page-two">
+    <div class="page-two" id="page2">
+      <div class="Ptwo-head">
+        <h1>What we <span>can do?</span></h1>
+      </div>
 
+      <div class="Ptwo-our-servieces-bx">
+        <div class="card">
+          <i class="fa-solid fa-chart-simple"></i>
+          <h2>Hashtag Growth</h2>
+          <p>Follow a hashtag growth total <br>posts, videos and images.</p>
+        </div>
+        <div class="card">
+          <i class="fa-solid fa-cubes"></i>
+          <h2>Influencers</h2>
+          <p>Follow a hashtag growth total <br>posts, videos and images.</p>
+        </div>
+        <div class="card">
+          <i class="fa-solid fa-arrow-trend-up"></i>
+          <h2>Most Influental Post</h2>
+          <p>Follow a hashtag growth total <br>posts, videos and images.</p>
+        </div>
+        <div class="card">
+          <i class="fa-solid fa-paper-plane"></i>
+          <h2>Most Influental Post</h2>
+          <p>Follow a hashtag growth total <br>posts, videos and images.</p>
+        </div>
+      </div>
+
+      <div class="Ptwo-video-bx">
+        <video src="video/video (2160p).mp4" autoplay muted loop></video>
+        <div class="text-bx">
+          <div class="clip-shape-for-text-bx"></div>
+          <h1>Great Digital Product Agency <br>since 2016</h1>
+          <p>Our business Plan is a written document describing a company's core business activites, Objectives, and how
+            it plans to achieve its goals.Our goal is to provide our client high quality Product with modern idea
+            accordingly their budget and according thir requirements.</p>
+        </div>
+      </div>
+
+      <div class="page-two-block2">
+        <div class="text-bx">
+          <div class="clip-shape-for-text-bx"></div>
+          <h1>How can we help your Business ?</h1>
+          <p>We buid readymade websites, mobile applicarions, and elaborate online business services.</p>
+        </div>
+        <div class="card-bx">
+          <div class="col-1">
+            <div class="block2-card">
+              <span><i class="fa-brands fa-unity"></i></span>
+              <h1>Business idea Planning</h1>
+              <p>Protocols apart from aengage models, pricing billing</p>
+            </div>
+            <div class="block2-card">
+              <span><i class="fa-solid fa-code"></i></span>
+              <h1>Financial Planning System</h1>
+              <p>Protocols apart from aengage models, pricing billing</p>
+            </div>
+          </div>
+          <div class="col-2">
+            <div class="block2-card">
+              <span><i class="fa-solid fa-wallet"></i></span>
+              <h1>Development Website and App</h1>
+              <p>Protocols apart from aengage models, pricing billing</p>
+            </div>
+            <div class="block2-card">
+              <span><i class="fa-solid fa-chart-simple"></i></span>
+              <h1>Market Analysis Projects</h1>
+              <p>Protocols apart from aengage models, pricing billing</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
 
     <!-- ---------------------------------------------- -->
     <div class="page-three">
+      <div class="page3-header">
+        <h1>How will <span>it be</span></h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis dicta nesciunt voluptatem recusandae?</p>
+      </div>
+
+      <div class="page3-cards-bx">
+        <div class="card c-1">
+          <span>1</span><h1>What is Lorem Ipsum?</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil voluptates aspernatur eos exercitationem?</p>
+        </div>
+        <div class="card c-2">
+          <span>2</span><h1>What is Lorem Ipsum?</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil voluptates aspernatur eos exercitationem?</p>
+        </div>
+        <div class="card c-3">
+          <span>3</span><h1>What is Lorem Ipsum?</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil voluptates aspernatur eos exercitationem?</p>
+        </div>
+        <div class="card c-4">
+          <span>4</span><h1>What is Lorem Ipsum?</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil voluptates aspernatur eos exercitationem?</p>
+        </div>
+        <div class="img-card c-5">
+          
+        </div>
+      </div>
 
     </div>
 
